Preserve resource names and module identities in URLs